[metadata]
name = googleapis
version = 0.0.9
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Smart date converter
long_description = file: README.md
long_description_content_type = text/markdown
keywords = google apis

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires = 
    google-api-python-client >= 2.46
    google-auth-oauthlib >= 0.5.1


[options.packages.find]
where = .
