[metadata]
name = googleapis
version = 1.5.0
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Unofficial Google apis.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = google apis

[options]
package_dir =
    = .
packages = find:
python_requires = ~=3.7
zip_safe = False
install_requires = 
    google-api-python-client ~= 2.46
    google-auth-oauthlib ~= 1.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    google = googleapis.cli.__init__:main
